# DocxLib

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DocxLib 开发需求文档 v1.0.md  FEATURE_TEMPLATE_VARIABLES.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  README.md  TEST_COVERAGE_SUMMARY.md  main.py  pyproject.toml  setup.py  test_fill_image.py  功能改进.md
docxlib/: __init__.py  cli.py  constants.py  document.py  errors.py  fill.py  style.py  table.py  utils.py
examples/: advanced_features.py  basic_usage.py  batch_processing.py  template_usage_example.py
fixtures/templates/: contract_template.docx  simple.docx  template_vars.docx
scripts/: create_test_template.py
tests/: __init__.py  test_basic.py  test_cli.py  test_document.py  test_fill.py  test_read.py  test_read_edge_cases.py  test_table.py  test_template.py  test_utils.py
